// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GET /auth/login returns admin permissions 1`] = `
{
  "id": 1,
  "instrumentLogPermissions": [
    {
      "instrumentInfoUuid": null,
      "permission": "canWriteLogs",
    },
  ],
  "permissions": [
    {
      "id": 1,
      "permission": "canUpload",
    },
    {
      "id": 2,
      "permission": "canUploadModel",
    },
    {
      "id": 3,
      "permission": "canDelete",
    },
    {
      "id": 4,
      "permission": "canProcess",
    },
    {
      "id": 5,
      "permission": "canCalibrate",
    },
    {
      "id": 6,
      "permission": "canGetStats",
    },
    {
      "id": 7,
      "permission": "canAddPublication",
    },
    {
      "id": 8,
      "permission": "canPublishTask",
    },
    {
      "id": 10,
      "permission": "canLogin",
    },
    {
      "id": 11,
      "permission": "canManageContacts",
    },
    {
      "id": 12,
      "permission": "canManageNews",
    },
  ],
  "personId": null,
  "username": "admin",
}
`;

exports[`GET /auth/me returns current user with cookie from login 1`] = `
{
  "id": 1,
  "instrumentLogPermissions": [
    {
      "instrumentInfoUuid": null,
      "permission": "canWriteLogs",
    },
  ],
  "permissions": [
    {
      "id": 1,
      "permission": "canUpload",
    },
    {
      "id": 2,
      "permission": "canUploadModel",
    },
    {
      "id": 3,
      "permission": "canDelete",
    },
    {
      "id": 4,
      "permission": "canProcess",
    },
    {
      "id": 5,
      "permission": "canCalibrate",
    },
    {
      "id": 6,
      "permission": "canGetStats",
    },
    {
      "id": 7,
      "permission": "canAddPublication",
    },
    {
      "id": 8,
      "permission": "canPublishTask",
    },
    {
      "id": 10,
      "permission": "canLogin",
    },
    {
      "id": 11,
      "permission": "canManageContacts",
    },
    {
      "id": 12,
      "permission": "canManageNews",
    },
  ],
  "person": null,
  "personId": null,
  "username": "admin",
}
`;

exports[`GET /auth/me returns current user with new cookie 1`] = `
{
  "id": 1,
  "instrumentLogPermissions": [
    {
      "instrumentInfoUuid": null,
      "permission": "canWriteLogs",
    },
  ],
  "permissions": [
    {
      "id": 1,
      "permission": "canUpload",
    },
    {
      "id": 2,
      "permission": "canUploadModel",
    },
    {
      "id": 3,
      "permission": "canDelete",
    },
    {
      "id": 4,
      "permission": "canProcess",
    },
    {
      "id": 5,
      "permission": "canCalibrate",
    },
    {
      "id": 6,
      "permission": "canGetStats",
    },
    {
      "id": 7,
      "permission": "canAddPublication",
    },
    {
      "id": 8,
      "permission": "canPublishTask",
    },
    {
      "id": 10,
      "permission": "canLogin",
    },
    {
      "id": 11,
      "permission": "canManageContacts",
    },
    {
      "id": 12,
      "permission": "canManageNews",
    },
  ],
  "person": null,
  "personId": null,
  "username": "admin",
}
`;
